Finalizando arquitectura HATEOAS, Clientes, Auditorias y Personal